Adding facebook and twiiter auth

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "autumn-thunder",
+  "name": "odd-cake",
   "version": "1.0.0",
   "description": "My app description",
   "scripts": {
@@ -22,7 +22,9 @@
     "morgan": "^1.7.0",
     "nodemailer": "^2.3.0",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.0",
     "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "sqlite3": "^3.1.1",
     "watson-developer-cloud": "^2.31.1"
   },
