Adding facebook and twiiter auth

--- a/sample.env
+++ b/sample.env
@@ -11,3 +11,9 @@ DB_NAME='ibm_watson_nlp_demo'
 IBM_WATSON_NLU_URL='https://gateway.watsonplatform.net/natural-language-understanding/api'
 IBM_WATSON_NLU_USERNAME='111111-22222-3333-44444444444'
 IBM_WATSON_NLU_PASSWORD='1234567890'
+
+FACEBOOK_ID='00000'
+FACEBOOK_SECRET='00000'
+
+TWITTER_KEY='0000000'
+TWITTER_SECRET='000000'
